[project]
name = "internet-names-mcp"
version = "0.1.7"
description = "MCP server for checking availability of domain names, social media handles, and subreddits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Andrew" }
]
keywords = ["mcp", "domains", "social-media", "availability", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "sherlock-project>=0.14.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
internet-names-mcp = "internet_names_mcp:main"

[project.urls]
Homepage = "https://github.com/yourusername/InternetNamesMCP"
Repository = "https://github.com/yourusername/InternetNamesMCP"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/internet_names_mcp"]
